--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   <!-- Publishing Scripts -->  
   <script src="public/base.js" type="text/javascript"></script>
   <script src="public/header.js" type="text/javascript"></script>
-  <script src="public/homepage-gtm.js" type="text/javascript"></script>
-  <script src="public/shopping-bag.js" type="text/javascript"></script>
+  <!-- <script src="public/homepage-gtm.js" type="text/javascript"></script> -->
+  <!-- <script src="public/shopping-bag.js" type="text/javascript"></script> -->
   <!-- <script src="https://www.api.cannaco.us/index.js" type="text/javascript"></script> -->
 
 <!-- Age Verification Modal -->
@@ -150,38 +150,39 @@
     <!-- <main style="display: flex; align-items: center; justify-content: center;"> -->
     <main>
 
-        <div id="intro" class="card" style="background: #FED202;" style="max-width: 560px; padding: 0px 24px 40px 24px;">
+        <div id="intro" class="card" style="background: #FED202;" style="padding: 0px;">
           <div class="row">
             <div class="col col-1">
-              <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">Returns April 10th!</h1>
+              <img style="max-width: 560px; margin: 0 auto;" src="assets/sock-drop/welcome-compact.png">
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Returns April 10th!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%; padding: 16px 24px 0px 24px;">
-                <ul class="list-unstyled">
-                    <li class="social-share instagram" style="margin-bottom: 16px;">
+            <!-- <blockquote class="blockquote" style="text-align: left; margin: 0px; width: 100%; padding: 16px 24px 0px 24px;"> -->
+                <!-- <ul class="row list-unstyled">
+                    <li class="col  social-share instagram" style="margin: 0px 8px;">
                         <a href="https://www.instagram.com/cannaco.world/" target="_blank" style="text-decoration: none;">
-                            <button class="btn btn-block" style="display: flex; justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
-                                Follow on Instagram <i class="fab fa-instagram" style="margin-left: 8px;"></i>
+                            <button class="btn" style="justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
+                                <i class="fab fa-instagram"></i>
                             </button>
                         </a>
                     </li>
-                    <li class="social-share facebook" style="margin-bottom: 16px;">
+                    <li class="col  social-share facebook" style="margin: 0px 8px;">
                         <a href="https://www.facebook.com/cannacoworld" target="_blank" style="text-decoration: none;">
-                            <button class="btn btn-block" style="display: flex; justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
-                                Follow on Facebook <i class="fab fa-facebook-f" style="margin-left: 8px;"></i>
+                            <button class="btn" style="justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
+                                <i class="fab fa-facebook-f"></i>
                             </button>
                         </a>
                     </li>
-                    <li class="social-share facebook" style="margin-bottom: 16px;">
+                    <li class="col  social-share facebook" style="margin: 0px 8px;">
                         <a href="https://www.linkedin.com/company/cannaco-labs/" target="_blank" style="text-decoration: none;">
-                            <button class="btn btn-block" style="display: flex; justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
-                                Follow on Linkedin <i class="fab fa-linkedin" style="margin-left: 8px;"></i>
+                            <button class="btn" style="justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
+                                <i class="fab fa-linkedin"></i>
                             </button>
                         </a>
                     </li>
-                </ul>
+                </ul> -->
+
                 <!-- <div class="col col-1" style="padding: 8px 24px 0px 24px;">
                     <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Starts In</h1>
                   </div> -->
@@ -189,7 +190,164 @@
                 <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
                 </a> -->
-            </blockquote>
+            <!-- </blockquote> -->
+
+
+            <div id="products" class="container" style="max-width: 100%!important; padding: 0px 0px 16px 0px;">    
+                <div class="carousel-container carousel-arrows circle-arrows" id="media_carousel">
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/bucket.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/CropTop.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Grinder.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Pipe.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Hoody.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Hat.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Skateboard.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Socks.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Jersey.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Tote.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Visor.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 16px;">
+                                <img src="assets/images/Stickers.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+    
+                </div>
+            </div>
+
+            <!-- <blockquote class="blockquote" style="text-align: left; padding: 0px; width: 100%; display: block;">      
+                <a href="sock-drop-game.html" style="text-decoration: none;">
+                    <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 0px; padding: 8px 48px; height: 56px; border-radius: 48px; font-size: 24px; max-width: 420px; margin: 0px auto;">Play Now</button>
+                </a>
+            </blockquote> -->
 
 
 
@@ -201,7 +359,10 @@
             color: #ffd200;
             padding: 24px 40px;
             font-weight: 700;
-            margin-top: 24px;"></p>
+            max-width: 560px;
+            display: block;
+            margin: 0 auto;
+            margin-top: 0px;"></p>
 
             <script>
             // Set the date we're counting down to
