--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
 
             <div id="products" class="container" style="max-width: 100%!important; padding: 0px 0px 16px 0px;">    
                 <div class="carousel-container carousel-arrows circle-arrows" id="media_carousel">
+
                     <div class="col" style="padding: 0px;">
                         <div class="card card-strain" style="background: transparent;">
                             <div class="card-body" style="padding: 16px;">
-                                <img src="assets/images/bucket.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <img src="assets/images/Bucket.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
                                 <!-- <blockquote class="strain-description blockquote">
                                     <h1 class="title">Rain Jacket</h1>
                                     <div class="badge badge-round body-medium">Camo Print</div>
