--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         <div id="intro" class="card" style="background: #FED202;" style="padding: 0px;">
           <div class="row">
             <div class="col col-1">
-              <img style="max-width: 560px; margin: 0 auto;" src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Returns April 10th!</h1>
+              <img id="welcome-image" style="max-width: 560px; margin: 0 auto;" src="assets/sock-drop/welcome-compact.png">
+              <h1 id="welcome-text" class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Returns April 10th!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
