--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -94,15 +94,15 @@
   </script>
 
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JVFG9KZ4Z3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JVFG9KZ4Z3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-JVFG9KZ4Z3');
-</script>
+    gtag('config', 'G-JVFG9KZ4Z3');
+  </script>
 
 
   
@@ -195,44 +195,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Weedbesublime</th>
-                          <td>1111</td>
+                          <th scope="row">1. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. MJCP</th>
-                          <td>1052</td>
+                          <th scope="row">2. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Derrick Graham</th>
-                          <td>810</td>
+                          <th scope="row">3. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Kota</th>
-                          <td>710</td>
+                          <th scope="row">4. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. LeafTrade</th>
-                          <td>349</td>
+                          <th scope="row">5. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Marlowe</th>
-                          <td>208</td>
+                          <th scope="row">6. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Nick</th>
-                          <td>118</td>
+                          <th scope="row">7. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Brad</th>
-                          <td>103</td>
+                          <th scope="row">8. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Matthew Dean</th>
-                          <td>89</td>
+                          <th scope="row">9. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. JustinH</th>
-                          <td>78</td>
+                          <th scope="row">10. </th>
+                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
@@ -251,44 +251,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. MJCP</th>
-                          <td>588</td>
+                          <th scope="row">1. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Derrick Graham</th>
-                          <td>496</td>
+                          <th scope="row">2. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Weedbesublime</th>
-                          <td>486</td>
+                          <th scope="row">3. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Kota</th>
-                          <td>433</td>
+                          <th scope="row">4. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. LeafTrade</th>
-                          <td>160</td>
+                          <th scope="row">5. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Brad</th>
-                          <td>142</td>
+                          <th scope="row">6. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Marlowe</th>
-                          <td>117</td>
+                          <th scope="row">7. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Nick</th>
-                          <td>58</td>
+                          <th scope="row">8. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Matthew Dean</th>
-                          <td>48</td>
+                          <th scope="row">9. </th>
+                          <td>--</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Karlyn</th>
-                          <td>36</td>
+                          <th scope="row">10. </th>
+                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
