--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
 
 
 <body id="landing" style="background: #FED202; width: 100%; overflow: hidden;">
+
+    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+
+    <audio id="player" style="position: absolute; bottom: 40px; left: 40px; padding: 0px; z-index: 1000;" autoplay loop>
+      <source src="assets/audio/jammin.mp3" type="audio/mpeg" loop="loop">
+    </audio>
   <!-- Main -->
     <!-- <main style="display: flex; align-items: center; justify-content: center;"> -->
     <main>
