--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="row">
             <div class="col col-1">
               <img id="welcome-image" style="max-width: 560px; margin: 0 auto;" src="assets/sock-drop/welcome-compact.png">
-              <h1 id="welcome-text" class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Returns April 10th!</h1>
+              <h1 id="welcome-text" class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Win Amazing Prizes!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
@@ -199,13 +199,12 @@
             <!-- </blockquote> -->
 
 
-            <div id="products" class="container" style="max-width: 100%!important; padding: 0px 0px 16px 0px;">    
+            <div id="products" class="container" style="max-width: 100%!important; padding: 24px 0px 24px 0px;">    
                 <div class="carousel-container carousel-arrows circle-arrows" id="media_carousel">
-
                     <div class="col" style="padding: 0px;">
                         <div class="card card-strain" style="background: transparent;">
                             <div class="card-body" style="padding: 6px;">
-                                <img src="assets/images/Bucket.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <img src="assets/images/Skateboard.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
                                 <!-- <blockquote class="strain-description blockquote">
                                     <h1 class="title">Rain Jacket</h1>
                                     <div class="badge badge-round body-medium">Camo Print</div>
@@ -217,31 +216,7 @@
                     <div class="col" style="padding: 0px;">
                         <div class="card card-strain" style="background: transparent;">
                             <div class="card-body" style="padding: 6px;">
-                                <img src="assets/images/CropTop.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
-                                <!-- <blockquote class="strain-description blockquote">
-                                    <h1 class="title">Rain Jacket</h1>
-                                    <div class="badge badge-round body-medium">Camo Print</div>
-                                    <button class="btn btn-outline btn-block">Coming Soon</button>
-                                </blockquote> -->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col" style="padding: 0px;">
-                        <div class="card card-strain" style="background: transparent;">
-                            <div class="card-body" style="padding: 6px;">
-                                <img src="assets/images/Grinder.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
-                                <!-- <blockquote class="strain-description blockquote">
-                                    <h1 class="title">Rain Jacket</h1>
-                                    <div class="badge badge-round body-medium">Camo Print</div>
-                                    <button class="btn btn-outline btn-block">Coming Soon</button>
-                                </blockquote> -->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col" style="padding: 0px;">
-                        <div class="card card-strain" style="background: transparent;">
-                            <div class="card-body" style="padding: 6px;">
-                                <img src="assets/images/Pipe.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <img src="assets/images/Jersey.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
                                 <!-- <blockquote class="strain-description blockquote">
                                     <h1 class="title">Rain Jacket</h1>
                                     <div class="badge badge-round body-medium">Camo Print</div>
@@ -277,7 +252,31 @@
                     <div class="col" style="padding: 0px;">
                         <div class="card card-strain" style="background: transparent;">
                             <div class="card-body" style="padding: 6px;">
-                                <img src="assets/images/Skateboard.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <img src="assets/images/Grinder.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 6px;">
+                                <img src="assets/images/CropTop.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 6px;">
+                                <img src="assets/images/Bucket.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
                                 <!-- <blockquote class="strain-description blockquote">
                                     <h1 class="title">Rain Jacket</h1>
                                     <div class="badge badge-round body-medium">Camo Print</div>
@@ -290,18 +289,6 @@
                         <div class="card card-strain" style="background: transparent;">
                             <div class="card-body" style="padding: 6px;">
                                 <img src="assets/images/Socks.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
-                                <!-- <blockquote class="strain-description blockquote">
-                                    <h1 class="title">Rain Jacket</h1>
-                                    <div class="badge badge-round body-medium">Camo Print</div>
-                                    <button class="btn btn-outline btn-block">Coming Soon</button>
-                                </blockquote> -->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col" style="padding: 0px;">
-                        <div class="card card-strain" style="background: transparent;">
-                            <div class="card-body" style="padding: 6px;">
-                                <img src="assets/images/Jersey.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
                                 <!-- <blockquote class="strain-description blockquote">
                                     <h1 class="title">Rain Jacket</h1>
                                     <div class="badge badge-round body-medium">Camo Print</div>
@@ -346,19 +333,31 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col" style="padding: 0px;">
+                        <div class="card card-strain" style="background: transparent;">
+                            <div class="card-body" style="padding: 6px;">
+                                <img src="assets/images/Pipe.png" style="max-height: 420px; width: auto; margin: 0 auto; border-radius: 24px;">
+                                <!-- <blockquote class="strain-description blockquote">
+                                    <h1 class="title">Rain Jacket</h1>
+                                    <div class="badge badge-round body-medium">Camo Print</div>
+                                    <button class="btn btn-outline btn-block">Coming Soon</button>
+                                </blockquote> -->
+                            </div>
+                        </div>
+                    </div>
     
                 </div>
             </div>
 
-            <!-- <blockquote class="blockquote" style="text-align: left; padding: 0px; width: 100%; display: block;">      
+            <blockquote class="blockquote" style="text-align: left; padding: 0px; width: 100%; display: block;">      
                 <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 0px; padding: 8px 48px; height: 56px; border-radius: 48px; font-size: 24px; max-width: 420px; margin: 0px auto;">Play Now</button>
                 </a>
-            </blockquote> -->
+            </blockquote>
 
 
 
-            <p id="demo" style="width: 80%;
+            <!-- <p id="demo" style="width: 80%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -369,7 +368,7 @@
             max-width: 560px;
             display: block;
             margin: 0 auto;
-            margin-top: 0px;"></p>
+            margin-top: 0px;"></p> -->
 
             <script>
             // Set the date we're counting down to
