--- a/index.html
+++ b/index.html
@@ -349,15 +349,15 @@
                 </div>
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; padding: 0px; width: 100%; display: block;">      
+            <!-- <blockquote class="blockquote" style="text-align: left; padding: 24px 40px 0px 40px; width: 100%; display: block;">      
                 <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 0px; padding: 8px 48px; height: 56px; border-radius: 48px; font-size: 24px; max-width: 420px; margin: 0px auto;">Play Now</button>
                 </a>
-            </blockquote>
+            </blockquote> -->
 
 
 
-            <!-- <p id="demo" style="width: 80%;
+            <p id="demo" style="width: 80%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -368,7 +368,7 @@
             max-width: 560px;
             display: block;
             margin: 0 auto;
-            margin-top: 0px;"></p> -->
+            margin-top: 0px;"></p>
 
             <script>
             // Set the date we're counting down to
